2008-12-30  Aidan Kehoe  <kehoea@parhasard.net>

	* device-x.c (Fx_get_font_path): 
	Free the font path once we're finished with it. 

2008-12-28  Aidan Kehoe  <kehoea@parhasard.net>

	* file-coding.c (Fmake_coding_system): 
	Document our use of the safe-chars and safe-charsets properties,
	and the differences compared to GNU. 
	(make_coding_system_1): Don't drop the safe-chars and
	safe-charsets properties. 
	(Fcoding_system_property): Return the safe-chars and safe-charsets
	properties when asked for them.
	* file-coding.h (CODING_SYSTEM_SAFE_CHARSETS): 
	* coding-system-slots.h: 
	Make the safe-chars and safe-charsets slots available in these
	headers. 

2008-12-27  Aidan Kehoe  <kehoea@parhasard.net>

	* doc.c (Fbuilt_in_symbol_file): 
	Return a subr's filename immediately if we've found it. Check for
	compiled function and compiled macro docstrings in DOC too, and
	return them if they exist. 
	The branch of the if statement focused on functions may have
	executed, but we may still want to check variable bindings; an
	else clause isn't appropriate.

2008-12-27  Vin Shelton  <acs@xemacs.org>

	* syswindows.h: Don't define wide character interfaces for Cygwin
	1.7 and up.

2008-12-22  Aidan Kehoe  <kehoea@parhasard.net>

	* symbols.c (Fdefine_function): 
	* eval.c (define_function): 
	Record explicitly that we're defining a function in the load
	history, in both these files. 

2008-12-22  Aidan Kehoe  <kehoea@parhasard.net>

	* faces.c (Fbuilt_in_face_specifiers): 
	Document that we're returning a copy. 

2008-12-21  Aidan Kehoe  <kehoea@parhasard.net>

	* faces.c (Fbuilt_in_face_specifiers): 
	Don't simply warn the user not to modify
	Vbuilt_in_face_specifiers, enforce this by returning a copy of the
	list. 

2008-11-02  Stephen J. Turnbull  <stephen@xemacs.org>

	G++ 4.3 complains a lot about implicit conversions of string
	literals (const char *) to char *.  Shut it up.

	* console-x.h:
	* EmacsFrame.c:
	* EmacsManager.c:
	* EmacsShell-sub.c: